@@ -253,17 +253,23 @@ module I18n
       end # module Reserved
 
       # A regular expression that catches patterns.
-      PATTERN_REGEXP  = Regexp.new  '(.?)'  +
-                                    Markers::PATTERN       + '([^' + Markers::PATTERN_BEGIN + ']*)' +
-                                    Markers::PATTERN_BEGIN + '([^' + Markers::PATTERN_END   + ']+)' +
+      PATTERN_REGEXP  = Regexp.new  '(.?)'  + Markers::PATTERN       +
+                                    '([^\\' + Markers::PATTERN_BEGIN + ']*)\\' + Markers::PATTERN_BEGIN +
+                                    '([^\\' + Markers::PATTERN_END   + ']+)\\' + Markers::PATTERN_END   +
+                                    '((?:\\'+ Markers::PATTERN_BEGIN + '([^\\' + Markers::PATTERN_BEGIN +
+                                    ']+)\\' + Markers::PATTERN_END   + ')*)'
+
+      # A regular expression that extracts additional patterns attached.
+      MULTI_REGEXP    = Regexp.new  '\\'    + Markers::PATTERN_BEGIN          +
+                                    '([^\\' + Markers::PATTERN_END + ']+)\\'  +
                                     Markers::PATTERN_END
 
       # A regular expression that catches token groups or single tokens.
-      TOKENS_REGEXP   = Regexp.new  '(?:' +
-                                    '([^' +   Operators::Tokens::ASSIGN + '\\' + Operators::Tokens::OR + ']+)' +
-                                              Operators::Tokens::ASSIGN + '+'  +
+      TOKENS_REGEXP   = Regexp.new  '(?:'   +
+                                    '([^'   + Operators::Tokens::ASSIGN + '\\'      + Operators::Tokens::OR + ']+)' +
+                                              Operators::Tokens::ASSIGN + '+'       +
                                     '([^\\' + Operators::Tokens::OR     + ']+)\1?)' +
-                                    '|([^'  + Operators::Tokens::ASSIGN + '\\' + Operators::Tokens::OR + ']+)'
+                                    '|([^'  + Operators::Tokens::ASSIGN + '\\'      + Operators::Tokens::OR + ']+)'
 
     end # module Config
 
